kubernetes/apps/base/auth/lldap/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap
  labels:
    app.kubernetes.io/name: lldap
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`account.${domain}.${tld}`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - kind: Service
          name: lldap
          port: 17170
          sticky:
            cookie:
              httpOnly: true
              secure: true
              name: TraefikLdapSticky
